--- a/searx-instance/theme/src/less/light/search/results/default.less
+++ b/searx-instance/theme/src/less/light/search/results/default.less
@@ -7,8 +7,8 @@
   &:not(.only_template_images) {
     margin-top: 20px;
     margin-bottom: 20px;
-    display: grid;
-    grid-auto-flow: row;
+    display: flex;
+    flex-direction: column;
     grid-gap: 20px;
 
     .result {
